# RTOS-project-http-Ventilador-Para-bebe

./: README.md
Task/ADC_P/: CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  project_description.json
Task/ADC_P/esp-idf/: cmake_install.cmake
Task/ADC_P/main/: ADC.c  CMakeLists.txt  isr.c  isr.h  ledc.c  ledc.h  uart_user.c  uart_user.h
Task/Hm_5_LED_control_PWM_NTC/: CMakeCache.txt  CMakeLists.txt
Task/Hm_5_LED_control_PWM_NTC/main/: adc.c  adc.h  isr.h  led_rgb.c  led_rgb.h  main.c  uart.c  uart.h
Task/Led_control_PWM_NTC/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  config.env  flash_app_args  flasher_args.json  ldgen_libraries  project_description.json
Task/Led_control_PWM_NTC/esp-idf/: cmake_install.cmake
Task/Led_control_PWM_NTC/main/: CMakeLists.txt  adc.c  (+8 more)
Task/WIFI_ESP/: CMakeCache.txt  CMakeLists.txt
Task/examen1/: CMakeCache.txt  CMakeLists.txt
Task/http/: CMakeCache.txt  CMakeLists.txt  README.md  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  ldgen_libraries  project_description.json  sdkconfig.old
Task/http/main/: CMakeLists.txt  config_app.c  config_app.h  ds18b20.c  ds18b20.h  ds18b20_bitbang.c  ds18b20_bitbang.h  fan_control.c  fan_control.h  http_server.c  http_server.h  logic_app.c  logic_app.h  main.c  onewire.c  onewire.h  owb.c  owb.h  owb_rmt.c  owb_rmt.h  rgb_led.c  rgb_led.h  sensor_app.c  sensor_app.h  tasks_common.h  wifi_app.c  wifi_app.h
Task/http/main/webpage/: app.css  app.js  index.html
(+348 files in other folders)
